fix: remove percentage text on overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+$primary: #005371;
+
 .wrapper {
   display: flex;
   flex-flow: column;
@@ -14,7 +16,7 @@
   width: 100%;
   height: 50px;
   border-radius: 5px 5px 0 0;
-  background-color: #005371;
+  background-color: $primary;
   position: absolute;
   top: -5px;
   // left: 7%;
